# mask-kernel

./: README.md  pyproject.toml
examples/: demo_progressive_disclosure.py
examples/skills/data-analysis/: SKILL.md
examples/skills/pdf-processing/: SKILL.md  skill.py
src/mask/: __init__.py
src/mask/a2a/: __init__.py  executor.py  remote_connection.py  server.py
src/mask/agent/: __init__.py  agent_factory.py  base_agent.py  prompt_loader.py
src/mask/cli/: __init__.py  main.py
src/mask/cli/commands/: __init__.py  init.py  run.py
src/mask/core/: __init__.py  exceptions.py  registry.py  skill.py  state.py
src/mask/loader/: __init__.py  python_loader.py  skill_md_loader.py
src/mask/mcp/: __init__.py  client.py  integration.py
src/mask/middleware/: __init__.py  skill_middleware.py
src/mask/models/: __init__.py  config.py  llm_factory.py
src/mask/observability/: __init__.py  attributes.py  setup.py
src/mask/session/: __init__.py  session.py
src/mask/storage/: __init__.py  base.py  memory_store.py  postgresql_store.py  redis_store.py
tests/: test_observability.py
